@@ -2,10 +2,12 @@ package com.picture_app.eventEcho.Security;
 
 import com.picture_app.eventEcho.Entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomerUserDetails implements UserDetails {
     private final User user;
@@ -18,11 +20,14 @@ public class CustomerUserDetails implements UserDetails {
         return user;
     }
 
+//    @Override
+//    public Collection<? extends GrantedAuthority> getAuthorities() {
+//        return Collections.emptyList(); // Add role support later if needed
+//    }
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // Add role support later if needed
+        return List.of(new SimpleGrantedAuthority(user.getRole()));
     }
-
     @Override
     public String getPassword() {
         return user.getPassword();
